tests/ui/issues/issue-51154.rs
fn foo<F: FnMut()>() {
    let _: Box<F> = Box::new(|| ());
    //~^ ERROR mismatched types
}

fn main() {}
